fixed some miscellaneous layout problems

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -73,32 +73,21 @@ body {
 
 .wrapper {
     resize: both;
+    overflow: auto;
     position: absolute;
     height: 60vh;
     border: 2px solid red;
     width: 90vh;
     min-width: 60rem;
     min-height: 30rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .maxSize {
     position: fixed;
     min-width: 100%;
     height: 100%;
-}
-
-.wrapper::-webkit-scrollbar {
-    width: 1.8rem;
-    background-color: black;
-    border: 1px solid rgb(94, 144, 168);
-}
-
-.wrapper::-webkit-scrollbar-thumb {
-    background-color: rgba(110, 195, 223, 0.5);
-}
-
-.wrapper::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(110, 195, 223, 1);
 }
 
 .top {
@@ -216,7 +205,7 @@ main {
     display: grid;
     grid-template-columns: 4rem 1fr 2fr;
     position: relative;
-    height:100%;
+    height: calc(100% - 7rem);
 }
 
 /* nav */
@@ -550,6 +539,7 @@ footer {
     background-color: black;
     color: white;
     display: flex;
+    height: 3rem;
     flex-direction: row-reverse;
 }
 
@@ -569,7 +559,7 @@ footer p {
 
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
-    
+
     .wrapper {
         position: relative;
         min-width: unset;
